--- a/css_src/_landmark_common.scss
+++ b/css_src/_landmark_common.scss
@@ -19,7 +19,7 @@
     width:100%;
     font-size:250px;
     color:#00ffaa;
-    position:fixed;
+    position:absolute;
     text-align:center;
     top:50%;
     transform:translateY(-50%);
