--- a/css_src/style.scss
+++ b/css_src/style.scss
@@ -2,7 +2,13 @@
 
 @import "reset";
 
+@import "common";
+
 @import "landmark_common";
 
-@import "landmark_france";
+@import "transportation";
+
+@import "_main";
+
+
 
