--- a/css_src/_landmark_common.scss
+++ b/css_src/_landmark_common.scss
@@ -1,6 +1,6 @@
 .bg{
   background-color:#000;
-  width:100%;
+  width:4971px;
   height:100%;
   position:absolute;
   //overflow:hidden;
@@ -9,6 +9,7 @@
 .nation{
 
   &-small{
+    padding-top:10px;
     color:#00ffaa;
     position:fixed;
     left:50%;
@@ -18,17 +19,29 @@
 
   &-big{
     width:100%;
-    font-size:250px;
+    font-size:500px;
     color:#00ffaa;
     position:fixed;
     text-align:center;
     top:50%;
     transform:translateY(-50%);
-    opacity:0.1;
+    opacity:0.2;
   }
 
-
 }
+
+.btn-toggle{
+  width:76px;
+  height:50px;
+  background:url(../images/menu_button.png);
+  border:0;
+  text-indent:-99999em;
+  top:32px;
+  right:32px;
+  cursor:pointer;
+  position:fixed;
+}
+
 
 
 
@@ -41,7 +54,7 @@
 
 
 .land{
-
+  //position:absolute;
   &-wrap{
     width:595px;
     height:162px;
@@ -96,11 +109,16 @@
   }
   &-image{
     float:left;
-
     margin-right:45px;
+    cursor:pointer;
 
-
-
+    &:hover{
+      width:1920px;
+      height:1080px;
+      background:url(../images/france_land_big_1-1.jpg);
+      top:0;
+      left:0;
+    }
   }
 
 
@@ -114,3 +132,68 @@
   }
 }
 
+.timeline{
+  width:1800px;
+  //height:30px;
+  position:fixed;
+  bottom:25px;
+
+  //&-wrap{
+  //  content:"";
+  //  display:block;
+  //  text-align:center;
+  //}
+
+
+  .margin{
+    margin-right:20px;
+    margin-left:20px;
+  }
+
+  &-name1{
+    float:left;
+  }
+  &-name2{
+    float:left;
+
+    &:after{
+      content:"";
+      display:inline-block;
+      float:left;
+      width:400px;
+      height:1px;
+      background:#fff;
+
+      margin-top:9px;
+    }
+  }
+  &-name3{
+    float:left;
+
+    &:after{
+      content:"";
+      display:inline-block;
+      float:left;
+      width:400px;
+      height:1px;
+      background:#fff;
+      text-align:center;
+
+      margin-top:9px;
+    }
+  }
+  &-name4{
+    float:left;
+
+    &:after{
+      content:"";
+      display:inline-block;
+      float:left;
+      width:400px;
+      height:1px;
+      background:#fff;
+
+      margin-top:9px;
+    }
+  }
+}
