--- a/css_src/_common.scss
+++ b/css_src/_common.scss
@@ -1,11 +1,11 @@
-//.btn-toggle{
-//  width:76px;
-//  height:50px;
-//  background:url(../images/menu_button.png);
-//  border:0;
-//  text-indent:-99999em;
-//  top:32px;
-//  right:32px;
-//  cursor:pointer;
-//  position:fixed;
-//}
+.btn-toggle{
+  width:76px;
+  height:50px;
+  background:url(../images/menu_button.png);
+  border:0;
+  text-indent:-99999em;
+  top:32px;
+  right:32px;
+  cursor:pointer;
+  position:fixed;
+}
