--- a/html_src/_include/_header.html
+++ b/html_src/_include/_header.html
@@ -5,6 +5,7 @@
   <title></title>
   <link rel="stylesheet" href="../css/style.css" />
   <script src="../js/lib/jquery-3.2.1.min.js"></script>
+  <script src="../js/main.js"></script>
 
 </head>
 <body>
