--- a/css_src/_transportation.scss
+++ b/css_src/_transportation.scss
@@ -8,33 +8,25 @@
   font-size:90px;
   color:#00ffaa;
   background:url(../images/transport_main.jpg) no-repeat;
-  width:1920px;
-  height:1080px;
+  width:100%;
+  height:100%;
   text-align:center;
   line-height:1080px;
 }
 
 .border{
 
-  //&-wrap{
-  //  width:1920px;
-  //  height:100%;
-  //  border:215px solid #000;
-  //  //background:#000;
-  //  position:absolute;
-  //  top:0;
-  //  left:0;
-  //
-  //  opacity:0.5;
-  //}
+  &-wrap{
+
+  }
 
   &-box{
     border:3px solid #000;
     width:1523px;
     height:650px;
     position:fixed;
-    top:-50%;
-    left:50%;
-    transform:translate(-50%,50%);
+    left:184px;
+    top:173px;
+
   }
 }
