--- a/css_src/_transportation.scss
+++ b/css_src/_transportation.scss
@@ -1,7 +1,11 @@
 .bg-transport{
   width:100%;
   height:100%;
-  background:#ddd;
+  background: -moz-linear-gradient(top, rgba(255,198,198,0.25) 0%, rgba(250,255,0,0.25) 17%, rgba(255,140,40,0.25) 36%, rgba(234,153,40,0.25) 38%, rgba(62,255,40,0.25) 54%, rgba(83,242,51,0.25) 56%, rgba(255,141,137,0.25) 72%, rgba(248,147,140,0.25) 73%, rgba(137,255,182,0.25) 90%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(255,198,198,0.25) 0%,rgba(250,255,0,0.25) 17%,rgba(255,140,40,0.25) 36%,rgba(234,153,40,0.25) 38%,rgba(62,255,40,0.25) 54%,rgba(83,242,51,0.25) 56%,rgba(255,141,137,0.25) 72%,rgba(248,147,140,0.25) 73%,rgba(137,255,182,0.25) 90%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(255,198,198,0.25) 0%,rgba(250,255,0,0.25) 17%,rgba(255,140,40,0.25) 36%,rgba(234,153,40,0.25) 38%,rgba(62,255,40,0.25) 54%,rgba(83,242,51,0.25) 56%,rgba(255,141,137,0.25) 72%,rgba(248,147,140,0.25) 73%,rgba(137,255,182,0.25) 90%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#40ffc6c6', endColorstr='#4089ffb6',GradientType=0 ); /* IE6-9 */
+
 }
 
 .transport-tip{
@@ -21,12 +25,97 @@
   }
 
   &-box{
-    border:3px solid #000;
+    border:3px solid #fff;
     width:1523px;
     height:650px;
     position:fixed;
     left:184px;
     top:173px;
 
+    text-indent:-99999em;
+
+  }
+}
+
+.transport{
+
+  &-image{
+    cursor:pointer;
+  }
+  &-wrap{
+    margin-top:283px;
+    margin-bottom:385px;
+    position:relative;
+
+    &:nth-child(7){
+      margin-bottom:285px;
+    }
+  }
+
+  &-text{
+    width:607px;
+    color:#30373c;
+
+    position:absolute;
+    top:350px;
+    left:-110px;
+
+    &-title{
+      font-size:70px;
+    }
+
+    &-paragraph{
+      padding-left:30px;
+    }
+  }
+}
+
+.nav{
+  &-side{
+    width:80px;
+    color:#00ffaa;
+    font-size:18px;
+    font-weight:bold;
+    position:fixed;
+    top:93px;
+    right:225px;
+  }
+
+  &-title{
+    padding-bottom:30px;
+  }
+
+  &-height{
+    width:2px;
+    height:130px;
+    background:#00ffaa;
+    text-indent:-99999em;
+    margin:0 auto;
+  }
+
+  &-width{
+    width:15px;
+    height:2px;
+    background:#00ffaa;
+    text-indent:-99999em;
+    margin:70px auto;
+  }
+
+  &-arrow-box{
+    width:68px;
+    height:124px;
+    border:2px solid #00ffaa;
+    text-indent:-99999em;
+    position:relative;
+    box-sizing:border-box;
+    margin:0 auto;
+  }
+  &-arrow{
+    width:20px;
+    height:65px;
+    background:url(../images/transport_arrow.png) 0 0;
+    position:absolute;
+    top:40px;
+    left:22px;
   }
 }
