--- a/css_src/_landmark_common.scss
+++ b/css_src/_landmark_common.scss
@@ -3,7 +3,7 @@
   width:100%;
   height:100%;
   position:absolute;
-  //overflow:hidden;
+  overflow:hidden;
 }
 
 .nation{
@@ -110,12 +110,13 @@
   }
 }
 
+
+
 .timeline{
   width:1800px;
   position:fixed;
   bottom:25px;
   margin-left:110px;
-
 
 
   .margin{
