--- a/css_src/_menu.scss
+++ b/css_src/_menu.scss
@@ -52,7 +52,11 @@
   margin:30px 40px 0 0;
 
   &-item{
-    padding-bottom:200px;
+    margin-bottom:200px;
+
+  }
+
+  &-link{
     cursor:pointer;
 
     &:hover{
@@ -66,22 +70,20 @@
 .menu-landmark{
   display:none;
 
-  //width:50%;
   float:left;
   font-size:36px;
-
   margin:30px 0 0 80px;
+
+  &.on{
+    display:block;
+  }
 
 
   &-item{
     text-align:left;
     padding-bottom:50px;
-    cursor:pointer;
 
-    &:hover{
-      color:#00ffaa;
 
-    }
 
     &:before{
       content:"";
@@ -92,25 +94,34 @@
       margin-right:20px;
     }
   }
+
+  &-link{
+    cursor:pointer;
+
+    &:hover{
+      color:#00ffaa;
+    }
+  }
 }
 
 
 
 .menu-schedule{
+  display:none;
+
   float:left;
   font-size:36px;
 
   margin:284px 0 0 80px;
 
+  &.on{
+    display:block;
+  }
+
   &-item{
     text-align:left;
     padding-bottom:50px;
-    cursor:pointer;
 
-    &:hover{
-      color:#00ffaa;
-
-    }
 
     &:before{
       content:"";
@@ -119,6 +130,14 @@
       width:17px;
       height:17px;
       margin-right:20px;
+    }
+  }
+
+  &-link{
+    cursor:pointer;
+
+    &:hover{
+      color:#00ffaa;
     }
   }
 }
