--- a/css_src/_schedule.scss
+++ b/css_src/_schedule.scss
@@ -62,13 +62,15 @@
 }
 
 .border-radius{
-  width:30px;
-  height:30px;
+  width:25px;
+  height:25px;
   border-radius:50%;
   background:#00ffaa;
   position:absolute;
-  //top:0;
-  //left:0;
+  top:0;
+  left:0;
+
+  text-indent:-99999em;
 }
 
 .schedule{
